objects/DP_Picklist_Entry__c.object
<CustomObject>
    <description>The Picklist Entry custom object will contain the actual picklist values that will be available for selection.  The Sort Order field is used to set the order when the Alpha Sort option on the Picklist is FALSE.  The Active field can be used to hide a picklist value and keep it in the list if needed for historical reasons.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>Value as it will appear in a picklist selection list</inlineHelpText>
        <label>Display Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>DP_Picklist__c</referenceTo>
        <relationshipLabel>Picklist Entries</relationshipLabel>
        <relationshipName>Picklist_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>Used to sort the list when/if Alpha Sort on the main Picklist is False.</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Picklist Entry</label>
    <nameField>
        <label>Picklist Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Picklist Entries</pluralLabel>
    <recordTypes>
        <fullName>Custom_Picklist</fullName>
        <active>true</active>
        <description>A value in a custom picklist</description>
        <label>Custom Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dynamic_Picklist</fullName>
        <active>true</active>
        <description>A value in a dynamic picklist</description>
        <label>Dynamic Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType_Name</fullName>
        <active>true</active>
        <description>A Record Type name which is used to control picklist values</description>
        <label>RecordType Name</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>